updates per review:
Removed DT specific stuff from edge-cloud; made a similar implementation for open source

Implemented stub code
